<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/uploadSigns"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/upload_signs_text"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/respiratory_rate_card" />-->

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/heart_rate_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toTopOf="@+id/respiratory_rate_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/heart_rate_card_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/heart_rate_label_heading"
                    android:textSize="26sp"
                    app:layout_constraintBottom_toTopOf="@+id/heart_rate_bpm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/heart_rate_bpm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 BPM"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/measure_heart_rate_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/heart_rate_card_label" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/measure_heart_rate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/measure_heart_rate_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/heart_rate_bpm" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/respiratory_rate_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heart_rate_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/respiratory_rate_card_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/respiratory_rate_label_heading"
                    android:textSize="26sp"
                    app:layout_constraintBottom_toTopOf="@id/respiratory_rate_bpm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/respiratory_rate_bpm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 BPM"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/measure_respiratory_rate_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/respiratory_rate_card_label" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/measure_respiratory_rate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/measure_respiratory_rate_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/respiratory_rate_bpm" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>